Snakemake implementation - test calculate_LDscores

--- a/snakemake/workflow/Snakefile
+++ b/snakemake/workflow/Snakefile
@@ -3,15 +3,15 @@ rule all:
 		expand("/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baselineLD_v1.2/test/customized_baselineLD_cts.RegDB.{tissue}.{chrom}.out")
 rule calculate_LDscores:
 	resources:
-		time      = "5:00:00"
-		mem       = "65g"
-		account   = "apboyle99"
+		time      = "5:00:00",
+		mem_mb    = "65000",
+		account   = "apboyle99",
 		partition = "largemem,standard"
 	input:
-		script = "/nfs/turbo/boylelab/crone/tools/ldsc/ldsc.py"
-		bfile  = "/nfs/turbo/boylelab/crone/data/1KG/1000G_EUR_Phase3_plink/1000G.EUR.QC.RegDB.{chrom}"
-		annot  = "/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baselineLD_v1.2/serial/customized_baselineLD_cts.RegDB.{tissue}.{chrom}.annot.gz"
-		hm3    = "/nfs/turbo/boylelab/crone/data/1KG/hapmap3_snps/hm.{chrom}.snp"
+		script = "/nfs/turbo/boylelab/crone/tools/ldsc/ldsc.py",
+		bfile  = "/nfs/turbo/boylelab/crone/data/1KG/1000G_EUR_Phase3_plink/1000G.EUR.QC.RegDB.{chrom}",
+		annot  = "/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baselineLD_v1.2/serial/customized_baselineLD_cts.RegDB.{tissue}.{chrom}.annot.gz",
+		hm3    = "/nfs/turbo/boylelab/crone/data/1KG/hapmap3_snps/hm.{chrom}.snp",
 	output:
 		prefix = "/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baselineLD_v1.2/test/customized_baselineLD_cts.RegDB.{tissue}.{chrom}"
 	shell:
