Snakemake implementation - test calculate_LDscores

--- a/snakemake/workflow/Snakefile
+++ b/snakemake/workflow/Snakefile
@@ -1,3 +1,19 @@
+TISSUES=["ADIPOSE_TISSUE","ADRENAL_GLAND","ARTERIAL_BLOOD_VESSEL","BLOOD",
+				 "BLOOD_VESSEL","BONE_ELEMENT","BONE_MARROW","BRAIN",
+				 "BREAST","COLON","CONNECTIVE_TISSUE","EAR",
+				 "EMBRYO","ENDOCRINE_GLAND","EPITHELIUM","ESOPHAGUS",
+				 "EXOCRINE_GLAND","EXTRAEMBRYONIC_COMPONENT","EYE","GONAD","GENERIC",
+				 "HEART","IMMUNE_ORGAN","INTESTINE","KIDNEY",
+				 "LARGE_INTESTINE","LIMB","LIVER","LUNG",
+				 "LYMPH_NODE","LYMPHOID_TISSUE","MAMMARY_GLAND","MOUTH",
+				 "MUSCULATURE_OF_BODY","NERVE","OVARY","PANCREAS",
+				 "PENIS","PLACENTA","PROSTATE_GLAND","SKIN_OF_BODY",
+				 "SKIN_OF_PREPUCE_OF_PENIS","SMALL_INTESTINE","SPINAL_CORD","SPLEEN",
+				 "STOMACH","TESTIS","THYMUS","THYROID_GLAND",
+				 "UTERUS","VAGINA","VASCULATURE"]
+
+CHROMS=[x for x in range(1,23)]
+
 rule all:
 	input:
 		expand("/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baselineLD_v1.2/test/customized_baselineLD_cts.RegDB.{tissue}.{chrom}.out")
