--- a/snakemake/workflow/Snakefile
+++ b/snakemake/workflow/Snakefile
@@ -16,7 +16,7 @@ CHROMS=[x for x in range(1,23)]
 
 rule all:
 	input:
-		expand("/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baselineLD_v1.2/test/customized_baselineLD_cts.RegDB.{tissue}.{chrom}.out")
+		expand("/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baselineLD_v1.2/test/customized_baselineLD_cts.RegDB.{tissue}.{chrom}.out",tissue=TISSUES,chrom=CHROMS)
 rule calculate_LDscores:
 	resources:
 		time      = "5:00:00",
