--- a/snakemake/workflow/Snakefile
+++ b/snakemake/workflow/Snakefile
@@ -15,7 +15,7 @@ TISSUES=["ADIPOSE_TISSUE","ADRENAL_GLAND","ARTERIAL_BLOOD_VESSEL","BLOOD",
 CHROMS=[x for x in range(1,23)]
 
 rule all:
-	input:
+	output:
 		expand("/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baselineLD_v1.2/test/customized_baselineLD_cts.RegDB.{tissue}.{chrom}.out",tissue=TISSUES,chrom=CHROMS)
 rule calculate_LDscores:
 	resources:
