--- a/snakemake/workflow/Snakefile
+++ b/snakemake/workflow/Snakefile
@@ -16,11 +16,11 @@ CHROMS=[x for x in range(1,23)]
 
 ROOT_PATH          = "/nfs/turbo/boylelab/crone"
 LDSC_PATH          = "/nfs/turbo/boylelab/crone/tools/ldsc/ldsc.py"
-1KG_PATH           = "/nfs/turbo/boylelab/crone/data/1KG/1000G_EUR_Phase3_plink/1000G.EUR.QC.RegDB.{chrom}"
-RegDB_PATH         = "/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baselineLD_v1.2/serial/customized_baselineLD_cts.RegDB.{tissue}.{chrom}.annot.gz"
-HM3_PATH           = "/nfs/turbo/boylelab/crone/data/1KG/hapmap3_snps/hm.{chrom}.snp"
-LDscore_prefix     = "/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baseline_v1.2/test/customized_baselineLD_cts.RegDB.{tissue}.{chrom}"
-LDscore_prefix_OUT = "/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baseline_v1.2/test/customized_baselineLD_cts.RegDB.{tissue}.{chrom}.out"
+1KG_PATH           = "/nfs/turbo/boylelab/crone/data/1KG/1000G_EUR_Phase3_plink/1000G.EUR.QC.RegDB.{{chrom}}"
+RegDB_PATH         = "/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baselineLD_v1.2/serial/customized_baselineLD_cts.RegDB.{{tissue}}.{{chrom}}.annot.gz"
+HM3_PATH           = "/nfs/turbo/boylelab/crone/data/1KG/hapmap3_snps/hm.{{chrom}}.snp"
+LDscore_prefix     = "/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baseline_v1.2/test/customized_baselineLD_cts.RegDB.{{tissue}}.{{chrom}}"
+LDscore_prefix_OUT = "/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baseline_v1.2/test/customized_baselineLD_cts.RegDB.{{tissue}}.{{chrom}}.out"
 
 
 rule all:
