--- a/snakemake/workflow/Snakefile
+++ b/snakemake/workflow/Snakefile
@@ -14,26 +14,19 @@ TISSUES=["ADIPOSE_TISSUE","ADRENAL_GLAND","ARTERIAL_BLOOD_VESSEL","BLOOD",
 
 CHROMS=[x for x in range(1,23)]
 
-ROOT_PATH          = "/nfs/turbo/boylelab/crone"
 LDSC_PATH          = "/nfs/turbo/boylelab/crone/tools/ldsc/ldsc.py"
-1KG_PATH           = "/nfs/turbo/boylelab/crone/data/1KG/1000G_EUR_Phase3_plink/1000G.EUR.QC.RegDB.{{chrom}}"
-RegDB_PATH         = "/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baselineLD_v1.2/serial/customized_baselineLD_cts.RegDB.{{tissue}}.{{chrom}}.annot.gz"
-HM3_PATH           = "/nfs/turbo/boylelab/crone/data/1KG/hapmap3_snps/hm.{{chrom}}.snp"
-LDscore_prefix     = "/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baseline_v1.2/test/customized_baselineLD_cts.RegDB.{{tissue}}.{{chrom}}"
-LDscore_prefix_OUT = "/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baseline_v1.2/test/customized_baselineLD_cts.RegDB.{{tissue}}.{{chrom}}.out"
-
 
 rule all:
 	output:
-		expand(LDscore_prefix_OUT,tissue=TISSUES,chrom=CHROMS)
+		expand("/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baseline_v1.2/test/customized_baselineLD_cts.RegDB.{tissue}.{chrom}.out",tissue=TISSUES,chrom=CHROMS)
 rule calculate_LDscores:
 	input:
 		script = LDSC_PATH,
-		bfile  = 1KG_PATH,
-		annot  = RegDB_PATH,
-		hm3    = HM3_PATH,
+		bfile  = "/nfs/turbo/boylelab/crone/data/1KG/1000G_EUR_Phase3_plink/1000G.EUR.QC.RegDB.{chrom}",
+		annot  = "/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baselineLD_v1.2/serial/customized_baselineLD_cts.RegDB.{tissue}.{chrom}.annot.gz",
+		hm3    = "/nfs/turbo/boylelab/crone/data/1KG/hapmap3_snps/hm.{chrom}.snp",
 	output:
-		out     = LDscore_prefix,
-		out_out = LDscore_prefix_OUT
+		out     = "/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baseline_v1.2/test/customized_baselineLD_cts.RegDB.{tissue}.{chrom}",
+		out_out = "/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baseline_v1.2/test/customized_baselineLD_cts.RegDB.{tissue}.{chrom}.out"
 	shell:
-		"python {input.script} --l2 --bfile {input.bfile} --ld-wind-cm 1 --out {output.out} --annot {input.annot} --print-snps {input.hm3} > {output.out_out}"
+		"python {input.script} --l2 --bfile {input.bfile} --ld-wind-cm 1 --out {output.out} --annot {input.annot} --print-snps {input.hm3} > {output.prefix}.out"
