--- a/snakemake/workflow/Snakefile
+++ b/snakemake/workflow/Snakefile
@@ -17,7 +17,7 @@ CHROMS=[x for x in range(1,23)]
 LDSC_PATH          = "/nfs/turbo/boylelab/crone/tools/ldsc/ldsc.py"
 
 rule all:
-	output:
+	input:
 		expand("/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baseline_v1.2/test/customized_baselineLD_cts.RegDB.{tissue}.{chrom}.out",tissue=TISSUES,chrom=CHROMS)
 rule calculate_LDscores:
 	input:
