--- a/snakemake/workflow/Snakefile
+++ b/snakemake/workflow/Snakefile
@@ -23,10 +23,10 @@ rule calculate_LDscores:
 	input:
 		script = LDSC_PATH,
 		bfile  = "/nfs/turbo/boylelab/crone/data/1KG/1000G_EUR_Phase3_plink/1000G.EUR.QC.RegDB.{chrom}",
-		annot  = "/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baselineLD_v1.2/serial/customized_baselineLD_cts.RegDB.{tissue}.{chrom}.annot.gz",
+		annot  = "/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baselineLD_v1.2/serial/customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.{chrom}.annot.gz",
 		hm3    = "/nfs/turbo/boylelab/crone/data/1KG/hapmap3_snps/hm.{chrom}.snp",
 	output:
-		out     = "/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baseline_v1.2/test/customized_baselineLD_cts.RegDB.{tissue}.{chrom}",
-		out_out = "/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baseline_v1.2/test/customized_baselineLD_cts.RegDB.{tissue}.{chrom}.out"
+		out     = "/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baseline_v1.2/test/customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.{chrom}",
+		out_out = "/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baseline_v1.2/test/customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.{chrom}.out"
 	shell:
 		"python {input.script} --l2 --bfile {input.bfile} --ld-wind-cm 1 --out {output.out} --annot {input.annot} --print-snps {input.hm3} > {output.out_out}"
