--- a/snakemake/workflow/Snakefile
+++ b/snakemake/workflow/Snakefile
@@ -14,12 +14,14 @@ TISSUES=["ADIPOSE_TISSUE","ADRENAL_GLAND","ARTERIAL_BLOOD_VESSEL","BLOOD",
 
 CHROMS=[x for x in range(1,23)]
 
-LDSC_PATH          = "/nfs/turbo/boylelab/crone/tools/ldsc/ldsc.py"
+LDSC_PATH  = "/nfs/turbo/boylelab/crone/tools/ldsc/ldsc.py"
+LDSC_CONDA = "/nfs/turbo/boylelab/crone/tools/ldsc/environment.py"
 
 rule all:
 	input:
 		expand("/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baseline_v1.2/test/customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.{chrom}.out",tissue=TISSUES,chrom=CHROMS)
 rule calculate_LDscores:
+	conda: LDSC_CONDA
 	input:
 		script = LDSC_PATH,
 		bfile  = "/nfs/turbo/boylelab/crone/data/1KG/1000G_EUR_Phase3_plink/1000G.EUR.QC.RegDB.{chrom}",
@@ -29,4 +31,4 @@ rule calculate_LDscores:
 		out     = "/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baseline_v1.2/test/customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.{chrom}",
 		out_out = "/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baseline_v1.2/test/customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.{chrom}.out"
 	shell:
-		"python {input.script} --l2 --bfile {input.bfile} --ld-wind-cm 1 --out {output.out} --annot {input.annot} --print-snps {input.hm3} > {output.out_out}"
+		"home/crone/envs/ldsc/bin/python {input.script} --l2 --bfile {input.bfile} --ld-wind-cm 1 --out {output.out} --annot {input.annot} --print-snps {input.hm3} > {output.out_out}"
