Update calculate_h2 inputs

--- a/snakemake/workflow/Snakefile
+++ b/snakemake/workflow/Snakefile
@@ -46,10 +46,10 @@ rule calculate_LDscores:
 rule calculate_h2:
 	conda: LDSC_CONDA
 	input:
+		expand(config["ldsc"]["ldscore_path"] + "customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.{chrom}.OK",tissue=TISSUES,chrom=CHROMS),
 		script = LDSC_PATH,
 		python = LDSC_PYTHON,
-		sumstats = config["ldsc"]["GWAS"] + "{trait}/LDSC/{trait}.sumstats.gz",
-		expand("/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baselineLD_v1.2/test/customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.{chrom}.OK",tissue=TISSUES,chrom=CHROMS)
+		sumstats = config["ldsc"]["GWAS"] + "{trait}/LDSC/{trait}.sumstats.gz"
 	output:
 		out = config["ldsc"]["h2_path"] + "{trait}/{trait}/{tissue}",
 		done = config["ldsc"]["h2_path"] + "{trait}/{trait}/{tissue}.OK"
