--- a/snakemake/workflow/Snakefile
+++ b/snakemake/workflow/Snakefile
@@ -24,8 +24,8 @@ LDSC_PYTHON = config["ldsc"]["python"]
 
 rule all:
 	input:
-		expand("/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baselineLD_v1.2/test/customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.{chrom}.OK",tissue=TISSUES,chrom=CHROMS),
-		expand("/nfs/turbo/boylelab/crone/results/h2/{trait}/{trait}/{tissue}.OK",trait=TRAITS,tissue=TISSUES)
+		expand(config["ldsc"]["ldscore_path"] + "customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.{chrom}.OK",tissue=TISSUES,chrom=CHROMS),
+		expand(config["ldsc"]["h2_path"] + "{trait}/{trait}/{trait}.{tissue}.OK",trait=TRAITS,tissue=TISSUES)
 
 rule calculate_LDscores:
 	conda: LDSC_CONDA
@@ -51,12 +51,16 @@ rule calculate_h2:
 		python = LDSC_PYTHON,
 		sumstats = config["ldsc"]["GWAS"] + "{trait}/LDSC/{trait}.sumstats.gz"
 	output:
-		out = config["ldsc"]["h2_path"] + "{trait}/{trait}/{tissue}",
-		done = config["ldsc"]["h2_path"] + "{trait}/{trait}/{tissue}.OK"
+		expand(config["ldsc"]["h2_path"] + "{trait}/{trait}/{trait}.{tissue}.log",trait=TRAITS,tissue=TISSUES),
+		expand(config["ldsc"]["h2_path"] + "{trait}/{trait}/{trait}.{tissue}.results",trait=TRAITS,tissue=TISSUES),
+		expand(config["ldsc"]["h2_path"] + "{trait}/{trait}/{trait}.{tissue}.delete",trait=TRAITS,tissue=TISSUES),
+		expand(config["ldsc"]["h2_path"] + "{trait}/{trait}/{trait}.{tissue}.part_delete",trait=TRAITS,tissue=TISSUES),
+		done = config["ldsc"]["h2_path"] + "{trait}/{trait}/{trait}.{tissue}.OK"
 	params:
 		ldscore = config["ldsc"]["ldscore_path"] + "customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.",
 		weights = config["ldsc"]["weights"],
-		freq = config["ldsc"]["freq"]
+		freq = config["ldsc"]["freq"],
+		out = config["ldsc"]["h2_path"] + "{trait}/{trait}/{trait}.{tissue}"
 
 	shell:
-		"{input.python} {input.script} --h2 {input.sumstats} --ref-ld-chr {params.ldscore} --w-ld-chr {params.weights} --overlap-annot --frqfile-chr {params.freq} --out {output.out} --print-coefficients --print-delete-vals && touch {output.done}"
+		"{input.python} {input.script} --h2 {input.sumstats} --ref-ld-chr {params.ldscore} --w-ld-chr {params.weights} --overlap-annot --frqfile-chr {params.freq} --out {params.out} --print-coefficients --print-delete-vals && touch {output.done}"
