--- a/snakemake/workflow/Snakefile
+++ b/snakemake/workflow/Snakefile
@@ -32,7 +32,6 @@ rule calculate_LDscores:
 	input:
 		script = LDSC_PATH,
 		python = LDSC_PYTHON,
-		bfile  = config["ldsc"]["1KG"] + "1000G.EUR.QC.RegDB.{chrom}",
 		annot  = config["ldsc"]["baselineLD"] + "customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.{chrom}.annot.gz",
 		hm3    = config["ldsc"]["HM3"] + "hm.{chrom}.snp"
 	output:
@@ -40,9 +39,10 @@ rule calculate_LDscores:
 	params:
 		out  = config["ldsc"]["ldscore_path"] + "customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.{chrom}",
 		done = config["ldsc"]["ldscore_path"] + "customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.{chrom}.OK",
+		bfile  = config["ldsc"]["1KG"] + "1000G.EUR.QC.RegDB.{chrom}",
 		ld_wind_cm = 1
 	shell:
-		"{input.python} {input.script} --l2 --bfile {input.bfile} --ld-wind-cm {params.ld_wind_cm} --out {params.out} --annot {input.annot} --print-snps {input.hm3} && touch {params.done}"
+		"{input.python} {input.script} --l2 --bfile {params.bfile} --ld-wind-cm {params.ld_wind_cm} --out {params.out} --annot {input.annot} --print-snps {input.hm3} && touch {params.done}"
 
 rule calculate_h2:
 	conda: LDSC_CONDA
