--- a/snakemake/workflow/Snakefile
+++ b/snakemake/workflow/Snakefile
@@ -30,19 +30,21 @@ rule all:
 rule calculate_LDscores:
 	conda: LDSC_CONDA
 	input:
-		script = LDSC_PATH,
-		python = LDSC_PYTHON,
-		annot  = config["ldsc"]["baselineLD"] + "customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.{chrom}.annot.gz",
-		hm3    = config["ldsc"]["HM3"] + "hm.{chrom}.snp"
+		expand(config["ldsc"]["baselineLD"] + "customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.{chrom}.annot.gz",tissue=TISSUES,chrom=CHROMS),
+		expand(config["ldsc"]["HM3"] + "hm.{chrom}.snp",tissue=TISSUES,chrom=CHROMS)
 	output:
 		expand(config["ldsc"]["ldscore_path"] + "customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.{chrom}.{ext}",tissue=TISSUES,chrom=CHROMS,ext=["log","l2.ldscore.gz","l2.M","l2.M_5_50","OK"]),
 	params:
+		script = LDSC_PATH,
+		python = LDSC_PYTHON,
 		out  = config["ldsc"]["ldscore_path"] + "customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.{chrom}",
 		done = config["ldsc"]["ldscore_path"] + "customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.{chrom}.OK",
 		bfile  = config["ldsc"]["1KG"] + "1000G.EUR.QC.RegDB.{chrom}",
+		annot  = config["ldsc"]["baselineLD"] + "customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.{chrom}.annot.gz",
+		hm3    = config["ldsc"]["HM3"] + "hm.{chrom}.snp",
 		ld_wind_cm = 1
 	shell:
-		"{input.python} {input.script} --l2 --bfile {params.bfile} --ld-wind-cm {params.ld_wind_cm} --out {params.out} --annot {input.annot} --print-snps {input.hm3} && touch {params.done}"
+		"{params.python} {params.script} --l2 --bfile {params.bfile} --ld-wind-cm {params.ld_wind_cm} --out {params.out} --annot {params.annot} --print-snps {params.hm3} && touch {params.done}"
 
 rule calculate_h2:
 	conda: LDSC_CONDA
