--- a/snakemake/workflow/Snakefile
+++ b/snakemake/workflow/Snakefile
@@ -50,17 +50,17 @@ rule calculate_h2:
 	conda: LDSC_CONDA
 	input:
 		expand(config["ldsc"]["ldscore_path"] + "customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.{chrom}.OK",tissue=TISSUES,chrom=CHROMS),
-		script = LDSC_PATH,
-		python = LDSC_PYTHON,
-		sumstats = config["ldsc"]["GWAS"] + "{trait}/LDSC/{trait}.sumstats.gz"
+		expand(config["ldsc"]["GWAS"] + "{trait}/LDSC/{trait}.sumstats.gz",trait=TRAITS)
 	output:
 		expand(config["ldsc"]["h2_path"] + "{trait}/{trait}/{trait}.{tissue}.{ext}",trait=TRAITS,tissue=TISSUES,ext=["log","results","delete","part_delete","OK"])
-		
 	params:
+		script = LDSC_PATH,
+		python = LDSC_PYTHON,
 		out = config["ldsc"]["h2_path"] + "{trait}/{trait}/{trait}.{tissue}",
 		done = config["ldsc"]["h2_path"] + "{trait}/{trait}/{trait}.{tissue}.OK",
+		sumstats = config["ldsc"]["GWAS"] + "{trait}/LDSC/{trait}.sumstats.gz",
 		ldscore = config["ldsc"]["ldscore_path"] + "customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.",
 		weights = config["ldsc"]["weights"],
 		freq = config["ldsc"]["freq"]
 	shell:
-		"{input.python} {input.script} --h2 {input.sumstats} --ref-ld-chr {params.ldscore} --w-ld-chr {params.weights} --overlap-annot --frqfile-chr {params.freq} --out {params.out} --print-coefficients --print-delete-vals && touch {params.done}"
+		"{params.python} {params.script} --h2 {params.sumstats} --ref-ld-chr {params.ldscore} --w-ld-chr {params.weights} --overlap-annot --frqfile-chr {params.freq} --out {params.out} --print-coefficients --print-delete-vals && touch {params.done}"
