--- a/snakemake/workflow/Snakefile
+++ b/snakemake/workflow/Snakefile
@@ -37,14 +37,14 @@ rule calculate_LDscores:
 	params:
 		script = LDSC_PATH,
 		python = LDSC_PYTHON,
-		out  = config["ldsc"]["ldscore_path"] + "customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.{chrom}",
-		done = config["ldsc"]["ldscore_path"] + "customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.{chrom}.OK",
-		bfile  = config["ldsc"]["1KG"] + "1000G.EUR.QC.RegDB.{chrom}",
-		annot  = config["ldsc"]["baselineLD"] + "customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.{chrom}.annot.gz",
-		hm3    = config["ldsc"]["HM3"] + "hm.{chrom}.snp",
+		out  = config["ldsc"]["ldscore_path"] + "customized_baselineLD_cts.RegDB.quantile_normalized",
+		done = config["ldsc"]["ldscore_path"] + "customized_baselineLD_cts.RegDB.quantile_normalized",
+		bfile  = config["ldsc"]["1KG"] + "1000G.EUR.QC.RegDB",
+		annot  = config["ldsc"]["baselineLD"] + "customized_baselineLD_cts.RegDB.quantile_normalized",
+		hm3    = config["ldsc"]["HM3"] + "hm",
 		ld_wind_cm = 1
 	shell:
-		"{params.python} {params.script} --l2 --bfile {params.bfile} --ld-wind-cm {params.ld_wind_cm} --out {params.out} --annot {params.annot} --print-snps {params.hm3} && touch {params.done}"
+		"{params.python} {params.script} --l2 --bfile {params.bfile}.{wildcard.chrom} --ld-wind-cm {params.ld_wind_cm} --out {params.out}.{wildcard.tissue}.{wildcard.chrom} --annot {params.annot}.{wildcard.tissue}.{wildcard.chrom}.annot.gz --print-snps {params.hm3}.{wildcard.chrom}.snp && touch {params.done}.{wildcard.tissue}.{wildcard.chrom}.OK"
 '''
 rule calculate_h2:
 	conda: LDSC_CONDA
