--- a/snakemake/workflow/Snakefile
+++ b/snakemake/workflow/Snakefile
@@ -32,17 +32,24 @@ rule calculate_LDscores:
 	input:
 		script = LDSC_PATH,
 		python = LDSC_PYTHON,
-		bfile  = config["ldsc"]["1KG"] + "1000G.EUR.QC.RegDB.{chrom}",
 		annot  = config["ldsc"]["baselineLD"] + "customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.{chrom}.annot.gz",
 		hm3    = config["ldsc"]["HM3"] + "hm.{chrom}.snp"
 	output:
-		expand(config["ldsc"]["ldscore_path"] + "customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.{chrom}.{ext}",tissue=TISSUES,chrom=CHROMS,ext=["log","l2.ldscore.gz","l2.M","l2.M_5_50","OK"]),
-		out  = config["ldsc"]["ldscore_path"] + "customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.{chrom}",
-		done = config["ldsc"]["ldscore_path"] + "customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.{chrom}.OK"
+		#expand(config["ldsc"]["ldscore_path"] + "customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.{chrom}.{ext}",tissue=TISSUES,chrom=CHROMS,ext=["log","l2.ldscore.gz","l2.M","l2.M_5_50","OK"]),
+		config["ldsc"]["ldscore_path"] + "customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.{chrom}.l2.ldscore.gz",
+		config["ldsc"]["ldscore_path"] + "customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.{chrom}.OK"
 	params:
-		ld_wind_cm = 1
+		bfile = config["ldsc"]["1KG"] + "1000G.EUR.QC.RegDB",
+		ld_wind_cm = 1,
+		out = config["ldsc"]["ldscore_path"] + "customized_baselineLD_cts.RegDB.quantile_normalized"
 	shell:
-		"{input.python} {input.script} --l2 --bfile {input.bfile} --ld-wind-cm {params.ld_wind_cm} --out {output.out} --annot {input.annot} --print-snps {input.hm3} && touch {output.done}"
+		"{{input.python}} {{input.script}}"
+		" --l2"
+		" --bfile  {{params.bfile}}.{{wildcards.chrom}}"
+		" --ld-wind-cm {{params.ld_wind_cm}}"
+		" --out {{params.out}}.{{wildcards.tissue}}.{{wildcards.chrom}}"
+		" --annot {{input.annot}}"
+		" --print-snps {{input.hm3}} && touch {{params.out}}.{{wildcards.tissue}}.{{wildcards.chrom}}.OK"
 '''
 rule calculate_h2:
 	conda: LDSC_CONDA
