--- a/snakemake/workflow/Snakefile
+++ b/snakemake/workflow/Snakefile
@@ -24,8 +24,8 @@ LDSC_PYTHON = config["ldsc"]["python"]
 
 rule all:
 	input:
-		expand(config["ldsc"]["ldscore_path"] + "customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.{chrom}.{ext}",tissue=TISSUES,chrom=CHROMS,ext=["log","l2.ldscore.gz","l2.M","l2.M_5_50","OK"])
-		#expand(config["ldsc"]["h2_path"] + "{trait}/{trait}/{trait}.{tissue}.{ext}",trait=TRAITS,tissue=TISSUES,ext=["log","results","delete","part_delete","OK"])
+		expand(config["ldsc"]["ldscore_path"] + "customized_baselineLD_cts.RegDB.quantile_normalized.{tissue}.{chrom}.l2.ldscore.gz",tissue=TISSUES,chrom=CHROMS)
+		expand(config["ldsc"]["h2_path"] + "{trait}/{trait}/{trait}.{tissue}.results",trait=TRAITS,tissue=TISSUES)
 
 rule calculate_LDscores:
 	conda: LDSC_CONDA
