--- a/snakemake/workflow/config.yaml
+++ b/snakemake/workflow/config.yaml
@@ -10,3 +10,5 @@ ldsc:
   freq: "/nfs/turbo/boylelab/crone/data/1KG/1000G_Phase3_frq/1000G.EUR.QC."
   ldscore_path: "/nfs/turbo/boylelab/crone/data/1KG/RegDB_custom_baselineLD_v1.2/test/"
   h2_path: "/nfs/turbo/boylelab/crone/results/h2"
+repo:
+  path: "/nfs/turbo/boylelab/crone/repo/TITR/"
